# Discord-Speech-Recognition

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
discord_speech_recognition/: __init__.py  audio.py  bot.py  config.py  receiver.py  sdk.py  types.py
discord_speech_recognition/recognizers/: __init__.py  base.py  google.py  whisper_api.py  whisper_local.py
